@@ -1,1 +1,1 @@
-SUBDIRS = xmlrpc++ rts2 rts2db rts2fits rts2lx200 rts2script rts2scheduler rts2json libindi
+SUBDIRS = xmlrpc++ rts2 rts2db rts2fits rts2lx200 rts2script rts2scheduler rts2json libindi rts2tel
