@@ -2,4 +2,4 @@ lib_LTLIBRARIES = librts2model.la
 
 AM_CXXFLAGS=@NOVA_CFLAGS@ -I../../../include
 
-librts2model_la_SOURCES = telmodel.cpp modelterm.cpp
+librts2model_la_SOURCES = teld.cpp telmodel.cpp modelterm.cpp
