@@ -1,3 +1,6 @@
+2012-11-28
+ * moved model and telescope drivers to rts2tel library
+
 2012-11-24
  * tar_telescope_mode
  * clients visible in rts2-mon
